--- a/!USER_dashboard/interface_user/index.html
+++ b/!USER_dashboard/interface_user/index.html
@@ -117,22 +117,23 @@
   <section>
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-2">
+        <div class="col-lg-6">
           <div class="p-5">
             <img class="img-fluid rounded-circle" src="img/4.gif" alt="">
           </div>
         </div>
-        <div class="col-lg-6 order-lg-1">
+        <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Access  from multiple devices </h2>
             <p>Manage personal or family budget.On your own or with your spouse. Using Web version on desktop or your phone</p>
+ve tour financial goals faster</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-
+ 
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
