--- a/!USER_dashboard/interface_user/index.html
+++ b/!USER_dashboard/interface_user/index.html
@@ -25,27 +25,15 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="img/logo.png" alt="" width="150" height="34">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log In</a>
-          </li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-light bg-dark py-3">
+    <div class="container-fluid">
+            <img src="./img/logo.png" width="119,324    mm" height="28,509   mm" alt="">
+        <div class="d-flex">
+                <button class="btn btn-outline-success  mx-4">Sign up</button>      
+                <button class="btn btn-outline-danger  ">Log in</button>
+        </div>
     </div>
-  </nav>
+</nav>
 
   <header class="masthead text-center text-white">
     <div class="masthead-content">
@@ -135,9 +123,9 @@ ve tour financial goals faster</p>
 
  
   <!-- Footer -->
-  <footer class="py-5 bg-black">
+  <footer class="py-3 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; 3ammek ghozzi </p>
+      <p class="m-0 text-center text-white small">Copyright &copy; TRIO </p>
     </div>
     <!-- /.container -->
   </footer>
